Fix issue with scrolling on iOS.

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,5 @@
 .head-image {
+	z-index: 0;
 	position: relative;
 	height: 700px;
 
